working on calibrate to samples

--- a/config/config.ini
+++ b/config/config.ini
@@ -15,7 +15,7 @@
 #
 # The first section [any-mode] defines default values for all modes,
 # which may be overriden in one of the sections for the
-# individual modes, [listen], [quiz], [licks], [play], [print], [calibrate].
+# individual modes, [listen], [quiz], [licks], [play], [print], [samples].
 #
 # These 1 + 6 sections together define the interactive behaviour of
 # harpwise and may be overridden by commandline arguments: e.g. the
@@ -119,8 +119,8 @@
 
 [print]
 
-[calibrate]
-  # db used for volume clause when doing auto calibration
+[samples]
+  # db used for volume clause when generating samples
   # higher values give louder samples
   auto_synth_db = -3
   
