--- a/resources/opt2desc.yaml
+++ b/resources/opt2desc.yaml
@@ -210,7 +210,7 @@ terse:
 read_fifo:
   - |
     When in the main listen-perspective, read keys from fifo
-    ~/.harpwise/control_fifo too.  This can be useful when automizing
+    ~/.harpwise/remote_fifo too.  This can be useful when automizing
     certain aspects of its operation. See in the
     installation-directory of harpwise the script util/timed.rb for an
     interesting application of this. The name of the fifo is fixed.
