print chart accepts holes

--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -81,7 +81,9 @@ tools:
     holes, to be used e.g. as an adhoc-scale.
   chart: |
     various harmonica charts for current key; add option --ref for
-    more charts
+    more charts. If you supply holes or notes as arguments (optional),
+    only these are printed in the chart of holes and the other charts
+    are left skipped.
   notes-major, notes: |
     print notes of major scale for given key
   progression, prog: |
