--- a/resources/opt2desc.yaml
+++ b/resources/opt2desc.yaml
@@ -40,13 +40,13 @@ no_add_holes:
     
 transpose_scale:
   - |
-    transpose the scale to given
-    key (e.g. d) or by semitones (e.g. 12st).  This would be helpful,
-    if you want to practice e.g. the d-major scale on a chromatic
-    harmonica of key c. Or if you want to play e.g. in third position,
-    you may transpose by 7st (= perfect fifth), as the scales are
-    generally notated in second position.  In any case: for a diatonic
-    harmonica your mileage may vary, as not all notes are available
+    transpose the scale
+    to given key (e.g. d) or by semitones (e.g. 12st).  This can be
+    helpful, if you want to practice e.g. the d-major scale on a
+    harmonica in key of c. Or, if you want to play e.g. in third
+    position, you may transpose by 7st (= perfect fifth).  In any
+    case: for a diatonic harmonica your mileage may vary, and some
+    holes or notes may be lost in the process
   - KEY_OR_SEMITONES
 
 display:
