--- a/resources/opt2desc.yaml
+++ b/resources/opt2desc.yaml
@@ -197,10 +197,10 @@ time_slice:
 
 viewer:
   - |
-    Viewer for images (e.g. of players); can be
-    'none' or one of the external programs 'feh' or 'chafa'
-    which need to be installed first.
-  - NONE_FEH_CHAFA
+    Method to view images (e.g. of players);
+    can be any of:
+    <%=get_viewers_desc%>
+  - VIEWER
   
 terse:
   - |
