Viewing player pictures in terminal

--- a/config/config.ini
+++ b/config/config.ini
@@ -73,13 +73,9 @@
   loop = true
 
   # Viewer for pictures (e.g. of players)
-  # make sure this program is installed and found in PATH. Possible
-  # values are:
-  # - chafa (within terminal); in Addition wget is needed too
-  # - feh (separate grafical window)
-  # - none
+  # specify an invalid value (e.g. '--viewer x' on the commandline)
+  # to learn about allowed values
   viewer = none
-  viewer_scale_to = 400
 
   # Tags for lick selection; interesting for modes licks, play or print
   # Type 'harpwise licks -o' to read their description
