--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -173,7 +173,7 @@
   - June 10, 1910 - January 10, 1976
   - Born as Chester Arthur Burnett.
   - American blues singer and guitarist.
-  - Inducted in the Blues Hall of Fame in 1980.
+  - Inducted in the Blues Hall of Fame in 1980
   - and the Rock and Roll Hall of Fame in 1991.
   notes:
   - Learned from Charley Patton and Sonny Boy Williamson II.
