--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -633,3 +633,29 @@
   - Telephone Blues
   - Got My Passport
   - She's My Baby
+
+- name: Steve Baker
+  bio:
+  - May 1, 1953 -
+  - Born in London
+  - British blues harmonica player.
+  notes:
+  - Came to germany in 1976, worked with Tony Sheridan and
+  - Franz Josef Degenhardt.
+  - Worked as a studio musicion with Dieter Bohlen, Truck Stop,
+  - Hannes Wader and others.
+  - As a hohner endorser and consultant helped to develop many
+  - new harmonica-models.
+  - He created several books with playalongs and
+  - step-by-step instructions. 
+  - Together with Abi Wallenstein und Martin Röttger formed
+  - 'the band "BluesCulture".'
+  - Published his first Solo-Album "Perfect Getaway" in 2018
+  source:
+  - https://de.wikipedia.org/wiki/Steve_Baker_(Musiker)
+  songs:
+  - Brand New Day
+  - One Word
+  - "Don't turn Your Back on Love"
+  - Apeman
+  
