two new players

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -160,8 +160,9 @@
   - blues, country, and world music.
   - Discovered the overblow and overdraw techniques for
   - chromatic playing in 1970.
-  - '"has been realistically presented as one of the most important"'
-  - '"and radical harmonica innovators of the twentieth century."'
+  - '"has been realistically presented as one of the most"'
+  - '"important and radical harmonica innovators of the"'
+  - '"twentieth century."'
   - (quote from https://www.allmusic.com)
   source: https://en.wikipedia.org/wiki/Howard_Levy
   songs:
@@ -658,4 +659,23 @@
   - One Word
   - "Don't turn Your Back on Love"
   - Apeman
-  
+
+- name: Greg Zlap
+  bio:
+  - 1971 -
+  - Civil name Greg Szlapczynski, born in Warsaw
+  - Polish-French harmonica player and singer.
+  notes:
+  - Arrived in France in the late 80 with his harmonica.
+  - Studied computer science and discovered clubs in paris.
+  - Worked with musicians such as Jean-Jacques Milteau.
+  - Jean-Marie Ecay or Olivier Ker Ourio.
+  - Beeing on tour he worked with Bill Deraime or Paul Personne.
+  source:
+  - https://fr.wikipedia.org/wiki/Greg_Szlapczynski
+  songs:
+  - Run Me Down
+  - Blues Bend Boogie
+  - The Blues will never leave you
+  - Pour le Meilleur
+  - Mississippi Strut  
