--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -288,7 +288,7 @@
 - name: Lee Oskar
   bio:
   - March 24, 1948 -
-  - Danish harmonica player vocalist and harmonica manufacturer.
+  - Danish harmonica player, vocalist and harmonica manufacturer.
   notes:
   - Moved to New York at the age of 18 with little more than a
   - harmonica in his pocket.
