rename timed.rb to jamming.rb and promote it

--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -112,10 +112,9 @@ tools:
     given scale and group and sort them accordingly.  This may give an
     idea, which of all licks can be played over the given scale
     (e.g. chord-i or blues)
-  utils, utilities, timed: |
-    Describe some utilities, that come with harpwise and need
-    to be invoked seperately. Especially the script timed.rb
-    can be useful to support free improvisation. 
+  jamming: |
+    describe the script jamming.rb, that plays a backing-track and gives
+    licks and chords to guide improvisation
   edit-licks: |
     invoke editor on your lickfile 
   edit-config: |
