--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -261,6 +261,9 @@ jamming:
   list, ls: |
     list available jamming-files and precede them by numbers, that
     might be used instead of a filename
+  play: |
+    just play the backing-track; can be useful if you want to search
+    for a matching lick-progression without actually starting to jam
 develop:
   man: |
     produce man page from erb-template
