--- a/resources/opt2desc.yaml
+++ b/resources/opt2desc.yaml
@@ -362,11 +362,13 @@ paused:
 
 print_only:
   - |
-    For jamming: only print timestamps
-    and actions, but dont try to talk with 'harpwise listen'
-    and do not actually sleep. At the end, produce a list of
-    timestamps, which can be checked against e.g. those produced
-    by 'harpwise jam play'
+    For actual jamming: instead of playing
+    the backing track and waiting for elapsed time, rather fake
+    it and print timestamps and actions in fast-forward.
+    Do not try to talk with 'harpwise listen' either.
+    At the end, produce a list of timestamps, which
+    can be checked against e.g. those you may generat with
+    'harpwise jam play'.
 
 wave:
   - |
