--- a/resources/opt2desc.yaml
+++ b/resources/opt2desc.yaml
@@ -362,9 +362,9 @@ paused:
 
 print_only:
   - |
-    For actual jamming: instead of playing
-    the backing track and waiting for elapsed time, rather fake
-    it and print timestamps and actions in fast-forward.
+    For 'jam along': instead of playing
+    the backing track and waiting for elapsed time, rather be
+    silent and print timestamps and actions in fast-forward.
     Do not try to talk with 'harpwise listen' either.
     At the end, produce a list of timestamps, which
     can be checked against e.g. those you may generat with
