--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -96,7 +96,7 @@ tools:
     calculate and print interval between two notes
   chords: |
     print chords i, iv and v for current key
-  transcribe: |
+  transcribe, trans: |
     transcribe given audio-file approximately
   search-holes-in-licks: |
     search given sequence of holes (or equiv) in all licks; the same
